ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
   nginx.ingress.kubernetes.io/rewrite-target: / 
spec:
  ingressClassName: nginx
  rules: 
     - host:
       http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service  # Replace with your service name
                port:
                  number: 80        # Port exposed by your service
